Starting to work on encoding

--- a/test/resources/iso.html
+++ b/test/resources/iso.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Basic</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
   </head>
   <body>
     <ul class="url-list">
